# jwt-server

./: .coveragerc  .env.dist  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .prettierrc.json  CHANGELOG.md  README.md  bumpversion  docker-compose.yml  fabfile.py  manage.py  package.json  pnpm-lock.yaml  pyproject.toml  run_tests.py  setup.py  sonar-project.properties  tox.ini  version.py  vite.config.js
docs/: Makefile  conf.py  index.rst
fabfile/: __init__.py
fabfile_extension/: __init__.py  sentry.py
jwtserver/: urls.py  views.py  wsgi.py
jwtserver/apps/token_api/: admin.py  forms.py  models.py  serializers.py  tests.py  urls.py  utils.py  validators.py  views.py
jwtserver/apps/token_api/migrations/: 0001_initial.py  0002_auto_20191125_1643.py  0003_authorizedservice.py  0004_applicationtoken.py  0005_alter_authorizedservice_data.py  0006_alter_authorizedservice_options_and_more.py
jwtserver/apps/token_api/schemas/: authorized_service.schema.json
jwtserver/apps/token_api/tests/: test_application_token.py  test_generic_token.py  test_models.py  test_serializers.py  test_utils.py  test_views.py
jwtserver/apps/token_api/tests/keys/: private-key.pem  public-key.pem
jwtserver/libs/: decorators.py
jwtserver/libs/api/: client.py  exceptions.py
jwtserver/libs/tests/api/: test_client.py
jwtserver/locale/fr/LC_MESSAGES/: django.po
jwtserver/settings/: base.py  dev.py  preprod.py  prod.py  test.py  unittest.py
jwtserver/static/css/: core_header.css  footer.css  home_header.css  home_main.css  home_section.css  jwtserver.css  navbar.css  token_form.css
jwtserver/static/js/: home.js  jwtserver.js  shiki.js  token.js
jwtserver/templates/: base.html
jwtserver/templates/pages/: home.html  token_for_service.html
jwtserver/templatetags/: dipstrapfiles.py
requirements/: common.txt  dev.txt  preprod.txt  prod.txt  test.txt
