[tool.poetry]
name = "jwt-server"
version = "1.5.1"
description = ""
authors = ["DIP - Université de Strasbourg <dnum-dip@unistra.fr>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "~3.2.0"
djangorestframework = "~3.14.0"
djangorestframework-simplejwt = "~5.2.0"
django-cors-headers = "~3.13.0"
django-cas-sso = "~1.2.0"
sentry-sdk = "^1.0"
requests = "^2.28.0"
cryptography = "^38.0"
psycopg2-binary = "<2.9"
python-ldap = "^3.4"

[tool.poetry.group.prod.dependencies]
chaussette-backport = "^1.3.1"
waitress = "2.1.2"

[tool.poetry.group.preprod.dependencies]
chaussette-backport = "^1.3.1"
waitress = "2.1.2"

[tool.poetry.group.test.dependencies]
chaussette-backport = "^1.3.1"
waitress = "2.1.2"

[tool.poetry.group.dev.dependencies]
coverage = "^6.5.0"
Sphinx = "^5.2.3"
pylint = "^2.15.3"
pycodestyle = "^2.9.1"
django-debug-toolbar = "^3.7.0"
django-extensions = "^3.2.1"
tox = "^3.26.0"
flake8 = "^5.0.4"
safety = "^2.3.1"
black = "^22.8.0"
pre-commit = "^2.20.0"

[tool.black]
line-length = 88
skip-string-normalization = true
target-version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | jwtserver\/settings
    | jwtserver\/apps\/token_api\/migrations
    | fabfile
    | _build
    | buck-out
    | build
    | dist
    | jwtserver/wsgi.py
  )/
  | manage.py
  | tox.ini
  | .coveragerc
                     # the root of the project
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
