[tool.poetry]
name = "jwt-server"
version = "1.7.2"
description = ""
authors = ["DIP - Université de Strasbourg <dnum-dip@unistra.fr>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
cryptography = "^42.0"
Django = "~4.2.0"
django-cas-sso = "~1.2.0"
django-cors-headers = "^4.3"
djangorestframework = "~3.15.0"
djangorestframework-simplejwt = "~5.3.0"
jsonschema = "^4.21.1"
psycopg2-binary = "^2.9"
python-ldap = "^3.4"
requests = "^2.31.0"
sentry-sdk = "^2.0"

[tool.poetry.group.prod.dependencies]
chaussette-backport = "^1.3.1"
waitress = "2.1.2"

[tool.poetry.group.preprod.dependencies]
chaussette-backport = "^1.3.1"
waitress = "2.1.2"

[tool.poetry.group.test.dependencies]
chaussette-backport = "^1.3.1"
waitress = "2.1.2"

[tool.poetry.group.dev.dependencies]
black = "^24.1"
coverage = "^7.0.0"
django-debug-toolbar = "^4.2.0"
django-extensions = "^3.2.1"
flake8 = "^7.0"
pre-commit = "^3.3"
pycodestyle = "^2.9.1"
pylint = "^2.15.3"
safety = "^2.3.1"
tox = "^4.6"

[tool.black]
line-length = 88
skip-string-normalization = true
target-version = ['py39']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | jwtserver\/settings
    | jwtserver\/apps\/token_api\/migrations
    | fabfile
    | _build
    | buck-out
    | build
    | dist
    | jwtserver/wsgi.py
  )/
  | manage.py
  | tox.ini
  | .coveragerc
                     # the root of the project
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
